background bug fix

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<link rel="icon" type="image/png" href="assets/img/common/logo/logo.png" sizes="16x16">
 	<link rel="manifest" href="assets/img/common/favicon/manifest.json">
 	<!-- <link rel="shortcut icon" href="assets/img/common/favicon/favicon.ico"> -->
-	<meta name="msapplication-TileColor" content="#da532c">
+	<!-- <meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-TileImage" content="assets/img/common/favicon/mstile-144x144.png">
 	<meta name="msapplication-config" content="assets/img/common/favicon/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#ffffff"> -->
 	<!-- End of Favicon -->
 	<!-- StyleSheets -->
 	<link rel="stylesheet" href="dist/style.css">
