--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
 	
 	<link rel="icon" type="image/png" href="assets/img/common/logo/logo.png" sizes="16x16">
 	<link rel="manifest" href="assets/img/common/favicon/manifest.json">
-	<!-- <link rel="shortcut icon" href="assets/img/common/favicon/favicon.ico"> -->
-	<!-- <meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-TileImage" content="assets/img/common/favicon/mstile-144x144.png">
-	<meta name="msapplication-config" content="assets/img/common/favicon/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff"> -->
+	
+	<!-- <meta name="theme-color" content="#ffffff">  -->
 	<!-- End of Favicon -->
 	<!-- StyleSheets -->
 	<link rel="stylesheet" href="dist/style.css">
@@ -170,9 +167,9 @@
 
 
 										<div class="button button--small button--shadow  ">
-											<input type="submit" class="button__input" value="Submit"> </div>
+											<input type="submit" class="button__input" value="Submit"> 
 										<!-- End of Button -->
-									</div>
+									    </div>
 								</div>
 							</form>
 						</div>
@@ -184,7 +181,7 @@
 
 
 
-		
+		</section>
 		<!-- End of Hero -->
 	
 		<!-- Section -->
@@ -407,7 +404,7 @@
 						<!-- End of Push -->
 					</div>
 				</div>
-				
+			</div>	
      </section> 
 	
 		<!-- End of Section -->
